[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/base_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/PauseGUI.gd" type="Script" id=2]

[node name="PauseGUI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 7
size_flags_vertical = 7
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 640.0
margin_bottom = 480.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_right = 640.0
margin_bottom = 480.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 0.509804 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 640.0
margin_bottom = 480.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 256.0
margin_top = 183.0
margin_right = 383.0
margin_bottom = 297.0
custom_constants/separation = 18

[node name="ResumeButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 127.0
margin_bottom = 26.0
text = "Resume"

[node name="QuitMenuButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 127.0
margin_bottom = 70.0
text = "Quit to Menu"

[node name="QuitButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 127.0
margin_bottom = 114.0
text = "Quit Game"

[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/QuitMenuButton" to="." method="_on_QuitMenuButton_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
